# simple-renderer

./: .gitignore  CMakeLists.txt
res/shaders/: basic.frag  basic.vert  phong.frag  phong.vert
src/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Inputs.cpp  Inputs.h  Light.h  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  SimpleRenderer.h  Texture.cpp  Texture.h  Timer.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h
src/shaders/: basic.frag  basic.vert
